# SimbaTollator

./: .env  .profile  Procfile  README.md  check end results.csv  contract_numbers.csv  deploy_key  deploy_key.pub  dump.rdb  heroku_deploy_key_base64.txt  matching_data.csv  output.txt  output1.txt  output_list_records.txt  pyproject.toml  requirements.txt  wsgi.py
instance/: your_database.db
migrations/versions/: 29c4784c8985_new_injection.py  39a888a04ecf_.py  a60b65ba32b7_.py  abbf0a51b153_.py  d69259184cfa_.py  f5448bde14ae_.py
simbatolls/: CHECKING.csv  Simba Intro.ipynb  app copy.py  app.py  check_postgre.py  checking1.csv  cleaner.py  db_initial_injection  header test.py  headerTest.py  import pandasql.py  setupUserName.py  testAIOHTTP.py  testAIOHTTP1.py  testingpost.py  worker.py
simbatolls/templates/: dashboard.html  home.html  license_key.html  login.html  search_results.html  summary.html  upload.html
uploads/: Daily Activity to 19 Aug 2023 1903.xlsx  Daily Activity to 19 Aug 2023 1903[90].xlsx  Tolls to 19 Aug 2023 1903.xls  Tolls_to_19_Aug_2023_1903.xls
